# Url-Shortener

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  docker-compose.yml
migrations/: 001_initial.sql
src/: id_generator.rs  lib.rs  main.rs  models.rs
src/api/: mod.rs
src/api/handlers/: redirect.rs  shorten.rs  stats.rs
src/api/middleware/: rate_limiter.rs
src/config/: mod.rs
src/errors/: mod.rs
src/infra/cache/: circuit_breaker.rs  id_alloc.rs  mod.rs  pool.rs  rate_limit.rs  stats_cache.rs  url_cache.rs
src/infra/db/: cassandra.rs  mod.rs  postgres.rs
src/infra/queue/: consumer.rs  producer.rs
src/observability/: health.rs  metrics.rs  tracing_setup.rs
src/services/: analytics_service.rs  mod.rs  url_service.rs
src/utils/: base62.rs
